<resources>
    <string name="app_name">GuiderGlu</string>
    <string name="measure_1_qingzhuyi">Please notice that your device has been calibrated.</string>
    <string name="measure_1_tip1">Please confirm the instrument calibration is completed.</string>
    <string name="measure_1_tip2">Please confirm that you have entered the correct profile.</string>
    <string name="measure_1_tip3">Please confirm to enter the normal data setting.</string>
    <string name="measure_1_tip4">Please follow the calibration instructions on the calibration page.</string>
    <string name="measure_1_tip5">Don’t use when charging.</string>
    <string name="measure_1_tip6">Please calibrate device and update your profile once every week at least. </string>
    <string name="glu_next">Next</string>
    <string name="measure_2_tip1">Bluetooth Connecting ......</string>
    <string name="measure_2_tip2">Please wait for the prompt to insert your finger.</string>
    <string name="measure_2_tip3">Recommended Ambient Temperature:27℃ -30℃</string>
    <string name="measure_2_tip4">Recommended Finger Temperature:29℃ -35℃</string>
    <string name="measure_2_btn_reconnect">Bluetooth connection failed. Please reconnect.</string>
    <string name="measure_3_qingchen">Morning Fasting</string>
    <string name="measure_3_canhou">2 Hours After Meal</string>
    <string name="measure_4_qingshenru">Please put your finger into the device.</string>
    <string name="measure_4_kaishi">Start Measuring</string>
    <string name="measure_5_shengyushijian">Time Remaining</string>
    <string name="measure_5_miao">Second</string>
    <string name="measure_5_qingbaochi">Please keep calm and keep your current position.</string>
    <string name="measure_6_qingkaiji"> Please long press the device’s power button for 2 seconds and the right side’s blue light is turned on.</string>
    <string name="measure_6_btn_querenkaiji">Next</string>
    <string name="result_1_maibo">Pulse</string>
    <string name="result_1_xuehongdanbai">Hemoglobin</string>
    <string name="result_1_xueyangbaohe">Blood Oxygen(%)</string>
    <string name="result_1_xueliusudu">Blood Flow Velocity</string>
    <string name="result_1_zhijian">Fingertip</string>
    <string name="result_1_huanjing">Ambient</string>
    <string name="result_1_dianchidianliang">Battery</string>
    <string name="result_1_wendu">Temperature</string>
    <string name="result_1_shidu">Humidity</string>
    <string name="measure_1_zhuyishixiang">Attentions</string>
    <string name="measure_2_kaijicaozuo">Starting Up</string>

    <string name="measure_result">Measurement Results</string>
    <string name="ble_connect">Bluetooth Connection</string>
    <string name="measure">Measurement</string>
    <string name="measure_blu">Measure Blood Sugar</string>

    <string name="setting">Setting</string>
    <string name="glu_height">Height (CM)</string>
    <string name="glu_weight">Weight (KG)</string>
    <string name="normal">Normal</string>
    <string name="hungry_glu">BFS</string>
    <string name="input_glu">Please enter blood glucose</string>
    <string name="save">Save</string>
    <string name="op_success">Successful operation</string>
    <string name="op_error">Operation failed</string>
    <string name="invalid_param">Illegal parameter</string>
    <string name="tips_setting">Please click on the upper right corner to set the height/weight parameter</string>
    <string name="glu_unit_food_2">mmol/L</string>
</resources>
