<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/head" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_38"
        android:text="@string/measure_2_tip1"
        android:textColor="#171717"
        android:textSize="@dimen/sp_18" />

    <ImageView
        android:layout_width="@dimen/dp_161"
        android:layout_height="@dimen/dp_161"
        android:layout_marginTop="@dimen/dp_23"
        android:background="@mipmap/bluetooth_connect" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/scan_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_34"
            android:text="10"
            android:visibility="gone"
            android:textStyle="bold"
            android:textColor="#f18937"
            android:textSize="@dimen/sp_28" />

        <Button
            android:id="@+id/button_failed"
            android:layout_width="@dimen/dp_347"
            android:layout_height="@dimen/dp_44"
            android:layout_marginTop="@dimen/dp_34"
            android:background="@drawable/button_color"
            android:text="@string/measure_2_btn_reconnect"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/sp_18"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_34"
        android:gravity="center"
        android:text="@string/measure_2_tip2"
        android:textColor="#171717"
        android:textSize="@dimen/sp_18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_21"
        android:text="@string/measure_2_tip3"
        android:textColor="#7D7D7D"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_11"
        android:text="@string/measure_2_tip4"
        android:textColor="#7D7D7D"
        android:textSize="@dimen/sp_14" />
</LinearLayout>