<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tc="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <include layout="@layout/head" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_33"
        android:text="@string/measure_5_shengyushijian"
        android:textColor="#171717"
        android:textSize="@dimen/sp_16" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30">

        <com.guider.glu_phone.view.ECGCompletedView
            android:id="@+id/time_measure"
            android:layout_width="@dimen/dp_164"
            android:layout_height="@dimen/dp_164"
            tc:circleColor="#F18937"
            tc:radius="@dimen/dp_66"
            tc:ringBgColor="@color/blue"
            tc:ringColor="@color/green"
            tc:strokeWidth="@dimen/dp_8" />


        <LinearLayout
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/round_measure"
            android:layout_width="@dimen/dp_121"
            android:layout_height="@dimen/dp_121">

            <TextView
                android:layout_marginTop="@dimen/dp_15"
                android:id="@+id/measure_time"
                android:includeFontPadding="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="59"
                android:textSize="@dimen/sp_48" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/measure_5_miao"
                android:textColor="#ACACAC"
                android:textSize="@dimen/sp_16" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/reminder"
        android:layout_marginTop="@dimen/dp_22"
        android:text="@string/measure_5_qingbaochi"
        android:textSize="@dimen/sp_14"
        android:textColor="#7D7D7D"
        android:gravity="center"
        android:layout_width="@dimen/dp_220"
        android:layout_height="wrap_content" />


</LinearLayout>