<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#F2F2F2">

    <include
        android:id="@+id/head"
        layout="@layout/head" />

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dp_28"
        android:layout_marginTop="@dimen/dp_16"
        android:orientation="vertical"
        android:background="#ffffff">

        <RelativeLayout
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/glu_height"
                android:gravity="center"
                android:textSize="@dimen/sp_18"
                android:textColor="#7D7D7D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"/>
            <EditText
                android:id="@+id/et_height"
                android:gravity="left"
                android:layout_marginLeft="@dimen/dp_6"
                android:textSize="@dimen/sp_18"
                android:textColor="#7D7D7D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/dp_80"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:inputType="number" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginLeft="@dimen/dp_40"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/glu_weight"
                android:gravity="center"
                android:textSize="@dimen/sp_18"
                android:textColor="#7D7D7D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />
            <EditText
                android:id="@+id/et_weight"
                android:gravity="left"
                android:layout_marginLeft="@dimen/dp_6"
                android:textSize="@dimen/sp_18"
                android:textColor="#7D7D7D"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/dp_80"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:inputType="number"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">
        <LinearLayout
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:id="@+id/ll_glu_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">
            <RadioGroup
                android:id="@+id/rg_glu_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:background="@drawable/glu_select_button_left"
                android:minWidth="@dimen/dp_150"
                android:minHeight="@dimen/dp_50"
                android:button="@null"
                android:gravity="center"
                android:checked="true"
                android:textColor="@drawable/glu_select_button_text_color"
                android:textSize="@dimen/sp_20"/>
            <RadioButton
                android:id="@+id/rb_abnormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=">=7"
                android:background="@drawable/glu_select_button_right"
                android:minWidth="@dimen/dp_150"
                android:minHeight="@dimen/dp_50"
                android:button="@null"
                android:gravity="center"
                android:checked="false"
                android:textColor="@drawable/glu_select_button_text_color"
                android:textSize="@dimen/sp_20"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_glu_value"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_below="@+id/ll_glu_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hungry_glu"
                android:layout_marginRight="@dimen/dp_15"
                android:textSize="@dimen/sp_15"/>
            <EditText
                android:id="@+id/et_glu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="@dimen/dp_150"
                android:hint="@string/input_glu"
                android:background="@null"
                android:inputType="numberDecimal"
                android:textSize="@dimen/sp_15"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="mmol/L"
                android:textSize="@dimen/sp_15"/>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/next"
        android:layout_width="@dimen/dp_347"
        android:layout_height="@dimen/dp_44"
        android:layout_marginTop="@dimen/dp_27"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/sp_18"
        android:background="@drawable/button_color"
        android:stateListAnimator="@null"
        android:text="@string/save" />
</LinearLayout>